--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
     "webpack": "^3.8.1",
     "webpack-merge": "^4.1.1",
     "extract-text-webpack-plugin": "^3.0.2"
-  }
+  },
+  "dependencies": {}
 }
